Fix field types thumbnails on dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -185,7 +185,7 @@ table th {
 .thumbs a {
   display: block;
   font-size: var(--ifm-h4-font-size);
-  color: inherit;
+  color: var(--ifm-color-gray-900);
   font-weight: 700;
   border: 1px solid var(--ifm-color-secondary);
   border-radius: var(--ifm-global-radius);
@@ -194,6 +194,8 @@ table th {
 .thumbs img {
   margin-bottom: 0;
   box-shadow: none;
+  border-radius: var(--ifm-global-radius) var(--ifm-global-radius) 0 0;
+  width: 100%;
 }
 .thumb_text {
   display: block;
